# EdgeCodeDPO

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt
clients/: openai_client.py
configs/: dataset.yaml
data/: dataset_generator.py  prompt_generator.py
edgecodedpo/: __main__.py  config.py
edgecodedpo/clients/: openai_client.py
edgecodedpo/configs/: dataset.yaml  dataset_2.yaml  dataset_3.yaml  dataset_test.yaml  training.yaml
edgecodedpo/data/: dataset_generator.py  dataset_metrics.py  prompt_generator.py
edgecodedpo/data/eval_metrics/edgecodedpo_test/train/: dataset_eval_results.json
edgecodedpo/data/stats/: token_length_stats.json
edgecodedpo/training/: cli.py  dpo.py  eval_metrics.py  integration.py  sft.py  sft_cli.py  train_sft.py  visualization.py
edgecodedpo/utils/: command_run.ipynb  generated_code_parsing.py  visu_multiple_models.py  visu_result_metrics.py
